--- a/ios/Podfile
+++ b/ios/Podfile
@@ -25,7 +25,7 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'AwesomeProject' do
+target 'mobiilirakendus' do
   config = use_native_modules!
 
   use_react_native!(
@@ -39,7 +39,7 @@ target 'AwesomeProject' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
-  target 'AwesomeProjectTests' do
+  target 'mobiilirakendusTests' do
     inherit! :complete
     # Pods for testing
   end
